--- a/docs/_includes/components/navbar.html
+++ b/docs/_includes/components/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <ul>
     <li>
-      <a href="{{ site.baseurl }}/" class="nav-item">
+      <a href="{{ site.baseurl }}" class="nav-item">
         <svg
           class="logo"
           width="24"
@@ -327,7 +327,7 @@
       </a>
     </li>
   </ul>
-  <button class="menu nav-item" data-navmenu aria-expanded="false">
+  <button class="nav-item" data-navmenu aria-expanded="false">
     <svg
       class="nav-item__main"
       xmlns="http://www.w3.org/2000/svg"
@@ -347,7 +347,7 @@
     </svg>
     <span class="visually-hidden"> Toggle Menu </span>
   </button>
-  <ul class="end-aligned dropdown">
+  <ul class="fixed-to-right dropdown">
     <li>
       <a href="https://antaresprogramming.github.io/articles/" class="nav-item">
         <svg
