--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -50,7 +50,7 @@ endif %}
   {% assign timestamp = site.time | date: "%N" %}
   <link
     rel="stylesheet"
-    href="{{ '/assets/css/zirconium.min.css' | prepend: site.baseurl | append: '?v=' | append: timestamp }}"
+    href="{{ 'assets/css/zirconium.min.css' | prepend: site.baseurl | append: '?v=' | append: timestamp }}"
   />
 
   <style>
