--- a/docs/_includes/components/breadcrumb.html
+++ b/docs/_includes/components/breadcrumb.html
@@ -1,8 +1,14 @@
+{% unless page.breadcrumbs == nil %}
 <nav class="small breadcrumb" aria-label="breadcrumbs">
   <ol>
-    <li>
-      <a href="https://antaresprogramming.github.io/">Antares Programming</a>
-    </li>
-    <li><a href="./index.html" aria-current="page">Zirconium</a></li>
+    <li><a href="https://antaresprogramming.github.io/">Antares Programming</a></li>
+    <li><a href="{{ site.baseurl }}zirconium">Zirconium</a></li>
+    {% assign crumbset = '' %}
+    {% for item in page.breadcrumbs %}
+      {% assign crumb = item | downcase | split: ' ' | join: '-'  %}
+      {% assign crumbset = crumb | append: '/' | prepend: crumbset %}
+      <li><a href="{{ crumbset | | prepend: site.baseurl  }}">{{ item }}</a></li>
+    {% endfor %}
   </ol>
 </nav>
+{% endunless %}
