--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -9,7 +9,7 @@
       <article class="post">
         <header class="header image-card">
           <img
-            src="{{ page.cover | prepend: '/assets/images/' | prepend: site.baseurl }}"
+            src="{{ page.cover | prepend: 'assets/images/' | prepend: site.baseurl }}"
             alt=""
             width="1280"
             height="640"
@@ -34,18 +34,7 @@
             </div>
             <div class="uppercase badge-group">
             </div>
-            <nav class="small breadcrumb" aria-label="breadcrumbs">
-              <ol>
-                <li>
-                  <a href="https://antaresprogramming.github.io/"
-                    >Antares Programming</a
-                  >
-                </li>
-                <li><a href="../">Zirconium</a></li>
-                <li><a>{{ page.subdirectory | split: ' ' | last }}</a></li>
-                <li><a aria-current="page">{{ page.title }}</a></li>
-              </ol>
-            </nav>
+            {% include components/breadcrumb.html %}
           </div>
         </header>
         <section class="sans page section">{{ content }}</section>
