🐛 Fixed link bug in breadcrumbs and menus

--- a/docs/_includes/components/breadcrumb.html
+++ b/docs/_includes/components/breadcrumb.html
@@ -2,7 +2,7 @@
 <nav class="small breadcrumb" aria-label="breadcrumbs">
   <ol>
     <li><a href="https://antaresprogramming.github.io/">Antares Programming</a></li>
-    <li><a href="{{ site.baseurl }}zirconium">Zirconium</a></li>
+    <li><a href="{{ site.baseurl }}">Zirconium</a></li>
     {% assign crumbset = '' %}
     {% for item in page.breadcrumbs %}
       {% assign crumb = item | downcase | split: ' ' | join: '-'  %}
