--- a/docs/_includes/components/navbar.html
+++ b/docs/_includes/components/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <ul>
     <li>
-      <a href="{{ site.baseurl }}" class="nav-item">
+      <a href="{{ site.url | append: site.baseurl }}" class="nav-item">
         <svg
           class="logo"
           width="24"
