🐛 Fixed link bugs

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -50,7 +50,7 @@ endif %}
   {% assign timestamp = site.time | date: "%N" %}
   <link
     rel="stylesheet"
-    href="{{site.url | append: site.baseurl | append: 'assets/css/zirconium.min.css' | append: '?v=' | append: timestamp }}"
+    href="{{site.url | append: site.baseurl | append: '/assets/css/zirconium.min.css' | append: '?v=' | append: timestamp }}"
   />
 
   <style>
