--- a/docs/_includes/scripts.html
+++ b/docs/_includes/scripts.html
@@ -1,2 +1,2 @@
-<script src="{{ site.url | append: site.baseurl | append: 'assets/js/zirconium.js' | append: '?v=' | append: timestamp }}"></script>
-<script src="{{ site.url | append: site.baseurl | append: 'assets/js/rainbow.min.js' | append: '?v=' | append: timestamp }}"></script>
+<script src="{{ site.url | append: site.baseurl | append: '/assets/js/zirconium.js' | append: '?v=' | append: timestamp }}"></script>
+<script src="{{ site.url | append: site.baseurl | append: '/assets/js/rainbow.min.js' | append: '?v=' | append: timestamp }}"></script>
