--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -9,7 +9,7 @@
       <article class="post">
         <header class="header image-card">
           <img
-            src="{{ site.url | append: site.baseurl | append: 'assets/images/'| append: page.cover }}"
+            src="{{ site.url | append: site.baseurl | append: '/assets/images/'| append: page.cover }}"
             alt=""
             width="1280"
             height="640"
