--- a/docs/_includes/components/breadcrumb.html
+++ b/docs/_includes/components/breadcrumb.html
@@ -7,7 +7,7 @@
     {% for item in page.breadcrumbs %}
       {% assign crumb = item | downcase | split: ' ' | join: '-'  %}
       {% assign crumbset = crumb | append: '/' | prepend: crumbset %}
-      <li><a href="{{ site.url | append: site.baseurl | append: crumbset }}">{{ item }}</a></li>
+      <li><a href="{{ site.url | append: site.baseurl | append: '/' | append: crumbset }}">{{ item }}</a></li>
     {% endfor %}
   </ol>
 </nav>
