--- a/docs/_includes/components/menu.html
+++ b/docs/_includes/components/menu.html
@@ -4,7 +4,8 @@
 <nav class="menu">
 {% for directory in subdirectories %}
 {% assign subpages = pages | where: 'subdirectory', directory | sort: "title" %}
-    <span class="menu__header">{{directory | split: ' ' | last }}</span>
+{% assign directoryPath = directory | downcase | split: ' ' | last %}
+    <a href="{{ site.url | append: site.baseurl | append: directoryPath }}" class="menu__header">{{directory | split: ' ' | last }}</a>
     <ul>
     {% for subpage in subpages %}
         {% unless subpage.hidden %}
