--- a/sass/components/side-note.scss
+++ b/sass/components/side-note.scss
@@ -4,7 +4,8 @@
     display        : flex;
     gap            : 1ch;
     justify-content: center;
-    padding        : var(--space-xs);
+    padding        : var(--space-l);
+    margin         : var(--space-l);
 
     --color: var(--subtle-text);
 }
@@ -40,7 +41,7 @@
     --color: var(--strawberry-700);
 }
 
-.error.side-note ::selection, 
+.error.side-note ::selection,
 .error.side-note::selection {
     color           : revert;
     background-color: var(--strawberry-100);
