--- a/sass/reset.scss
+++ b/sass/reset.scss
@@ -139,13 +139,6 @@ nav li:before {
 }
 
 ::selection {
-    background-color: var(--bubblegum-100);
-    color           : var(--bubblegum-900);
-}
-
-@media (prefers-color-scheme: dark) {
-    ::selection {
-        background-color: var(--bubblegum-900);
-        color           : var(--bubblegum-100);
-    }
+    background-color: var(--selection-background, var(--blueberry-100));
+    color           : var(--selection-foreground, var(--blueberry-900));
 }
