📝 Various docs fixes

--- a/docs/_includes/components/navbar.html
+++ b/docs/_includes/components/navbar.html
@@ -347,7 +347,7 @@
     </svg>
     <span class="visually-hidden"> Toggle Menu </span>
   </button>
-  <ul class="fixed-to-right dropdown">
+  <ul class="fixed-to-right uppercase dropdown">
     <li>
       <a href="https://antaresprogramming.github.io/articles/" class="nav-item">
         <svg
