--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -70,11 +70,11 @@ endif %}
       margin: 0;
     }
 
-    .post .section {
+    .post > .section {
       grid-column: 1/4;
     }
 
-    .post .section > :is(p, ul, ol, dl) {
+    .post > .section > :is(p, ul, ol, dl) {
       font-size: 1.1em;
       line-height: 1.5;
     }
