--- a/sass/components/banner.scss
+++ b/sass/components/banner.scss
@@ -19,7 +19,7 @@
 }
 
 .banner__text {
-    max-width    : 65ch;
+    max-width    : 65%;
     overflow     : hidden;
     text-overflow: ellipsis;
     white-space  : nowrap;
