--- a/docs/_includes/components/components-grid.html
+++ b/docs/_includes/components/components-grid.html
@@ -13,12 +13,12 @@
 {% unless !hasHeaders or hasHeaders != nil %}
 <h2>{{directory | split: ' ' | last }}</h2>
 {% endunless %}
-<div class="responsive-flex" style="--flex-gap: calc(var(--space-l) * 2)">
+<div class="{% unless include.layout %}responsive-grid{% endunless %}{% if include.layout %}{{ include.layout }}{% endif %}" style="--grid-gap: calc(var(--space-l) * 2); --column-size: 15em;">
 {% for subpage in subpages %}
 {% unless subpage.hidden %}
-<article class="{% unless subpage.card_image %}bordered primary raised{% endunless %} focusable hoverable card" style="--space: 0">
+<article class="bordered focusable hoverable card" style="--space: 0">
     {% if subpage.card_image %}
-    <img src="{{ site.url | append: site.baseurl | append: '/assets/images/component-representations/' | append: subpage.card_image }}" width="1080" height="1080" alt="">
+    <img src="{{ site.url | append: site.baseurl | append: '/assets/images/component-representations/' | append: subpage.card_image }}" width="1080" height="607.5" alt="">
     {% endif %}
     <h3 class="padding weight-light {% if subpage.card_image %}h4{% endif %} "><a href="{{ site.url | append: site.baseurl | append: subpage.url }}">{{subpage.title}}</a></h3>
     <p class="padding-m padding-top-none">{{ subpage.description }}</p>
