--- a/sass/components/badge.scss
+++ b/sass/components/badge.scss
@@ -26,7 +26,7 @@
     padding: var(--space-s) var(--space-l);
 }
 
-.badge:hover {
+a.badge[href]:hover {
     background-color: var(--hover-color);
 }
 
