--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -91,8 +91,8 @@
     margin-top : 1em;
 }
 
-.contents .full-width {
-    grid-column: 1 / 4;
+.full-width {
+    grid-column: 1 / -1;
     width      : 100%;
 }
 
