--- a/docs/_includes/components/navbar.html
+++ b/docs/_includes/components/navbar.html
@@ -327,7 +327,72 @@
       </a>
     </li>
   </ul>
-  <button class="nav-item" data-navmenu aria-expanded="false">
+  <ul class="uppercase hide-on-mobile end-aligned">
+    <li>
+      <a href="https://antaresprogramming.github.io/articles/" class="nav-item">
+        <svg
+          width="16"
+          height="16"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feather feather-book-open"
+        >
+          <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+          <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+        </svg>
+        <span class="nav-item__main">Articles</span>
+      </a>
+    </li>
+    <li>
+      <a href="https://antaresprogramming.github.io/courses/" class="nav-item">
+        <svg
+          class="w-6 h-6"
+          fill="none"
+          stroke="currentColor"
+          width="16"
+          height="16"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+          <path
+            d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+          ></path>
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+          ></path>
+        </svg>
+        <span class="nav-item__main">Courses</span>
+      </a>
+    </li>
+    <li>
+      <a href="https://antaresprogramming.github.io/authors/" class="nav-item">
+        <svg
+          width="16"
+          height="16"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feather feather-user"
+        >
+          <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+          <circle cx="12" cy="7" r="4"></circle>
+        </svg>
+        <span class="nav-item__main">Authors</span>
+      </a>
+    </li>
+  </ul>
+  <button class="nav-item" data-toggle aria-expanded="false">
     <svg
       class="nav-item__main"
       xmlns="http://www.w3.org/2000/svg"
@@ -347,7 +412,7 @@
     </svg>
     <span class="visually-hidden"> Toggle Menu </span>
   </button>
-  <ul class="fixed-to-right uppercase dropdown">
+  <ul class="fixed-to-right hide-on-larger-than-mobile level-1-border bordered uppercase dropdown">
     <li>
       <a href="https://antaresprogramming.github.io/articles/" class="nav-item">
         <svg
