--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -72,6 +72,7 @@
         position        : static;
     }
 
+    .navbar [data-toggle],
     .navbar [data-navmenu] {
         display: none;
     }
